# jluna_deprecated

./: CMakeLists.txt  README.md  find_julia.cmake  jluna.hpp
.c_adapter/: c_adapter.cpp  c_adapter.hpp  cppcall.in.jl  cppcall.jl.hpp.in
.c_wrapper/: c_adapter.cpp  c_adapter.hpp  cppcall.jl.hpp  cppcall.jl.hpp.in  cpplibrary.cpp  cpplibrary.hpp  main.c
.src/: array_proxy.inl  array_proxy_iterator.inl  array_vector.inl  box_any.inl  common.hpp  common.jl  cppcall.inl  detect_julia.cmake  exceptions.inl  function_proxy.inl  global_utilities.inl  include.jl.hpp.in  julia_extension.h  module_proxy.inl  primitive_proxy.inl  proxy.inl  state.inl  struct_proxy.inl  symbol_proxy.inl  type_proxy.inl  typedefs.hpp  unbox_any.hpp  unbox_any.inl  ~array_proxy.inl  ~array_proxy_iterator.inl  ~array_vector.inl  ~box_any.inl  ~proxy.inl
.src/julia/: common.jl  cpp_call.jl  exception_handler.jl  introspection.jl  memory_handler.jl  state_interface.jl  visibility_macros.jl
.test/: main.cpp  test.hpp
docs/: docs.md  proxies.md  quick_and_dirty.md  state.md
include/: array_proxy.hpp  box_any.hpp  concepts.hpp  cpp_call.hpp  cppcall.hpp  exceptions.hpp  function_proxy.hpp  global_utilities.hpp  include.jl  include.jl.hpp  julia_extension.h  module_proxy.hpp  primitive_proxy.hpp  proxy.hpp  state.hpp  struct_proxy.hpp  symbol_proxy.hpp  type.hpp  type_proxy.hpp  typedefs.hpp  unbox_any.hpp  ~array_proxy.hpp  ~box_any.hpp  ~proxy.hpp
